Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Default bounds and size can be overriden for a given map document
- Change XSLT transform to reverse the order of the layers since
mapserver actually reversed them.
- Layer control is AJAX again
- Add / edit map from CPS for Manager and PortalMapManager
Bug fixes:
~~~~~~~~~~
- First step toward IE compatibility
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Update devel docs
- cleanup the product.
