@@ -1,8 +1,8 @@
 <metal:block define-macro="map_selector"
-	     tal:define="current_map_id here/map_id|nothing;
-			 global current_map_id current_map_id|request/map_id; 
+	     tal:define="global show_selector python:template.id=='cps_geolocation_form';
+			 global current_map_id here/map_id|nothing; 
 			 current_map_context python:current_map_id and here.portal_maps.mapContextFor(current_map_id) or {}">
-<div style="padding:10px" tal:condition="not:current_map_context">
+<div style="padding:10px" tal:condition="python:show_selector or not current_map_context">
   <span tal:replace="current_map_id"/>
   <span i18n:translate="label_cpsgeo_select_base_map">
     Select base map
