@@ -8,6 +8,7 @@ New features:
 mapserver actually reversed them.
 - Layer control is AJAX again
 - Add / edit map from CPS for Manager and PortalMapManager
+- Map Document can be geo-localized
 Bug fixes:
 ~~~~~~~~~~
 - First step toward IE compatibility
